syntax = "proto3";
package perpdex.perpetual.v1;

option go_package = "github.com/openalpha/perp-dex/x/perpetual/types";

import "cosmos/msg/v1/msg.proto";
import "cosmos_proto/cosmos.proto";
import "amino/amino.proto";

// Msg defines the perpetual Msg service
service Msg {
  option (cosmos.msg.v1.service) = true;

  // Deposit deposits margin into the account
  rpc Deposit(MsgDeposit) returns (MsgDepositResponse);

  // Withdraw withdraws margin from the account
  rpc Withdraw(MsgWithdraw) returns (MsgWithdrawResponse);

  // UpdatePrice updates the mark price (oracle simulation)
  rpc UpdatePrice(MsgUpdatePrice) returns (MsgUpdatePriceResponse);
}

// MsgDeposit defines the Deposit request
message MsgDeposit {
  option (cosmos.msg.v1.signer) = "trader";
  option (amino.name) = "perpdex/perpetual/MsgDeposit";

  string trader = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string amount = 2; // amount in USDC
}

// MsgDepositResponse defines the Deposit response
message MsgDepositResponse {
  string new_balance = 1;
}

// MsgWithdraw defines the Withdraw request
message MsgWithdraw {
  option (cosmos.msg.v1.signer) = "trader";
  option (amino.name) = "perpdex/perpetual/MsgWithdraw";

  string trader = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string amount = 2; // amount in USDC
}

// MsgWithdrawResponse defines the Withdraw response
message MsgWithdrawResponse {
  string new_balance = 1;
}

// MsgUpdatePrice defines the UpdatePrice request (for oracle simulation)
message MsgUpdatePrice {
  option (cosmos.msg.v1.signer) = "authority";
  option (amino.name) = "perpdex/perpetual/MsgUpdatePrice";

  string authority = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string market_id = 2;
  string mark_price = 3;
  string index_price = 4;
}

// MsgUpdatePriceResponse defines the UpdatePrice response
message MsgUpdatePriceResponse {}
